--- a/source/webapp/templates/index.html
+++ b/source/webapp/templates/index.html
@@ -1,3 +1,4 @@
+{% load staticfiles %}
 <!doctype html>
 <html lang="en">
 <head>
@@ -5,27 +6,21 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Hello</title>
-    <style type="text/css">
-        body {
-            font-family: Arial, sans-serif;
-            font-size: 16px;
-            color: #444444;
-        }
-
-        .container {
-            margin: 0 auto;
-            width: 100%;
-            max-width: 900px;
-            text-align: center;
-        }
-
-    </style>
+    <link rel="stylesheet" href="{% static "css/style.css" %}">
+    <title>Notes</title>
 </head>
 <body>
 <div class="container">
-    <p>This is my first Django project!</p>
-    <p>Hello World!</p>
+    <h1>Записи</h1>
+    <p><a href="/notes/add/">Добавить запись</a></p>
+    {% for note in notes %}
+        <h3>{{ note.pk }}. {{ note.title }}</h3>
+        <p>Статус: ({{ note.status }})</p>
+        <p>{{ note.created_at }}</p>
+        <div>{{ note.text }}</div>
+    {% endfor %}
+    <p><a href="/notes/add/">Добавить запись</a></p>
+
 </div>
 </body>
 </html>
