--- a/source/webapp/templates/note_create.html
+++ b/source/webapp/templates/note_create.html
@@ -1,27 +1,34 @@
+{% load staticfiles %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" href="{% static "css/style.css" %}">
     <title>Create</title>
+
 </head>
 <body>
+<div class="container">
 
-<h1>Create Article</h1>
+<h1>Создать запись</h1>
 
 <form action="/notes/add/" method="post">
     {% csrf_token %}
    
-    <label>Title:</label><br/>
+    <label>Название:</label><br/>
     <input type="text" name="title"/><br/>
    
-    <label>Text:</label><br/>
+    <label>Данные:</label><br/>
     <textarea name="content"></textarea><br/>
    
-    <label>Author:</label><br/>
-    <input type="text" name="author"/><br/>
+    <select name="status">
+  <option value="new">Новая</option>
+  <option value="in_progress">В процессе</option>
+  <option value="done">Сделано</option>
+</select><br/>
     <br/>
-    <input type="submit" value="Send"/>
+    <input type="submit" value="Создать"/>
 </form>
-
+</div>
 </body>
 </html>
