--- a/source/webapp/templates/note_create.html
+++ b/source/webapp/templates/note_create.html
@@ -22,12 +22,15 @@
     <textarea name="content"></textarea><br/>
    
     <select name="status">
-  <option value="new">Новая</option>
-  <option value="in_progress">В процессе</option>
-  <option value="done">Сделано</option>
-</select><br/>
+      <option value="new">Новая</option>
+      <option value="in_progress">В процессе</option>
+      <option value="done">Сделано</option>
+    </select><br/>
     <br/>
     <input type="submit" value="Создать"/>
+
+
+    <p><a href="/">На главную</a></p>
 </form>
 </div>
 </body>
