--- a/source/webapp/templates/note_view.html
+++ b/source/webapp/templates/note_view.html
@@ -8,6 +8,7 @@
 </head>
 <body>
 <div class="container">
+    <h1>Запись добавлена!</h1>
     <h1>{{ note.title }}</h1>
     <p>{{ note.text }}</p>
     <p>{{ note.created_at }}</p><br>
