--- a/source/webapp/static/css/style.css
+++ b/source/webapp/static/css/style.css
@@ -20,6 +20,7 @@
 h1 {
     text-align: center;
     text-transform: uppercase;
+    margin-top: 50px;
 }
 
 .text {
@@ -29,4 +30,42 @@ h1 {
 a {
     font-weight: bold;
     margin: auto;
+}
+
+.navbar {
+    display: block;
+    background: #6a7dff;
+    position: fixed;
+    top: 0;
+    right: 0;
+    left: 0;
+    font-size: 0;
+    box-sizing: border-box;
+    padding: 7px 30px;
+    margin-bottom: 20px;
+}
+
+.menu {
+    font-size: 14px;
+    line-height: 1;
+    padding: 0;
+    margin: 0;
+    display: inline-block;
+    color: #fffee8;
+}
+
+.menu li {
+    display: inline-block;
+}
+
+.menu a {
+    display: inline-block;
+    text-decoration: none;
+    color: inherit;
+    padding: 5px 15px;
+}
+
+.menu a:hover {
+    color: #ffc122;
+    text-decoration: underline;
 }
