--- a/source/webapp/templates/index.html
+++ b/source/webapp/templates/index.html
@@ -1,27 +1,12 @@
-{% load staticfiles %}
-<!doctype html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport"
-          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="{% static "css/style.css" %}">
-    <title>Notes</title>
-</head>
-<body>
-<div class="container">
-    <h1>Записи</h1>
-        <p><a href="/notes/add/">Добавить запись</a></p>
-    <div class="column">
-        {% for note in notes %}
-            <h3>{{ note.pk }}. {{ note.title }}</h3>
-            <p>Статус: ({{ note.status }})</p>
-            <div class="text">{{ note.text }}</div>
-            <hr>
-        {% endfor %}
-    </div>
-    <p><a href="/notes/add/">Добавить запись</a></p>
-</div>
-</body>
-</html>
+{% extends 'base.html' %}
+{% block title %}Notes{% endblock %}
+{% block content %}
+    <h1>Notes</h1>
+    {% for note in notes %}
+        <hr>
+        <h3><a href="{% url "note_view" note.pk %}">{{ note.title }}</a></h3>
+        <div class="text">{{ note.description }}</div>
+        <p>({{ note.status }})</p>
+        <hr>
+    {% endfor %}
+{% endblock %}
