Сделаны миграция, исправлены блоки, добавлены удаление и редактирование

--- a/source/webapp/templates/note_create.html
+++ b/source/webapp/templates/note_create.html
@@ -5,26 +5,31 @@
 {% block content %}
     <h1>Create Note</h1>
 
-    <form action="{% url "note_create" %}" method="post">
-        {% csrf_token %}
+    {% url "note_create_create" as action_url %}
+    {% include 'partial/form.html' with action_url=action_url form_method='post' %}
 
-        <label>Title:</label><br/>
-        <input type="text" name="title"/><br/>
+{#    <form action="{% url "note_create" %}" method="post">#}
+{#        {% csrf_token %}#}
 
-        <label>Description:</label><br/>
-        <textarea name="text"></textarea><br/>
 
-        <label>Text:</label><br/>
-        <textarea name="text"></textarea><br/>
 
-        <label for="id-status">Status:</label><br/>
-        <select name="status" id="id-status">
-            {% for value, label in status_choices %}
-                <option value="{{ value }}">{{ label }}</option>
-            {% endfor %}
-        </select><br/>
-
-        <br/>
-        <input type="submit" value="Send"/>
-    </form>
+{#        <label>Title:</label><br/>#}
+{#        <input type="text" name="title"/><br/>#}
+{##}
+{#        <label>Description:</label><br/>#}
+{#        <textarea name="description"></textarea><br/>#}
+{##}
+{#        <label>Text:</label><br/>#}
+{#        <textarea name="text"></textarea><br/>#}
+{##}
+{#        <label for="id-status">Status:</label><br/>#}
+{#        <select name="status" id="id-status">#}
+{#            {% for value, label in status_choices %}#}
+{#                <option value="{{ value }}">{{ label }}</option>#}
+{#            {% endfor %}#}
+{#        </select><br/>#}
+{##}
+{#        <br/>#}
+{#        <input type="submit" value="Send"/>#}
+{#    </form>#}
 {% endblock %}
