--- a/source/webapp/templates/base.html
+++ b/source/webapp/templates/base.html
@@ -17,6 +17,7 @@
            <ul class="menu">
                <li><a href="{% url 'index' %}">Index</a></li>
                <li><a href="{% url 'note_create' %}">Create note</a></li>
+               <li><a href="{{ note.delete }}">Delete</a></li>
                {% block menu %}{% endblock %}
            </ul>
        </div>
