--- a/source/webapp/templates/index.html
+++ b/source/webapp/templates/index.html
@@ -4,9 +4,13 @@
     <h1>Notes</h1>
     {% for note in notes %}
         <hr>
-        <h3><a href="{% url "note_view" note.pk %}">{{ note.title }}</a></h3>
+        <h3><input type="checkbox" name="check" value="{{ note.pk }}">
+            <a href="{% url "note_view" note.pk %}">{{ note.title }}</a>
+        </h3>
         <div class="text">{{ note.description }}</div>
-        <p>({{ note.status }})</p>
+        <p>Status: {{ note.status }}</p>
+        <p>Time to do: {{ note.todo_at|date:"d.m.Y" }}</p>
+        <p><a href="{% url 'note_update' note.pk %}">Update</a> | <a href="{% url 'note_delete' note.pk %}">Delete</a></p>
         <hr>
     {% endfor %}
 {% endblock %}
